# apertium-es-pt

./: .gitattributes  .gitignore  Makefile.am  README  configure.ac  modes.xml
test/: es-pt-biltrans-expected.txt  es-pt-generator-expected.txt  es-pt-input.txt  es-pt-morph-expected.txt  es-pt-pretransfer-expected.txt  pt-es-input.txt  pt-es-morph-expected.txt  pt-es-postgen-expected.txt  pt-es-tagger-expected.txt  tests.json
